kustomize/overlays/prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-application-name-here
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    spec:
      containers:
        - name: your-application-name-here
          resources:
            requests:
              cpu: "400m"
              memory: "1Gi"
            limits:
              cpu: "800m"
              memory: "1536Mi"
