kustomize/overlays/prd/route.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: your-application-name-here
spec:
  tls:
    - hosts:
        - api-prd-your-application-name-here.via.com.br
      secretName: via-tls
  rules:
    - host: api-prd-your-application-name-here.via.com.br
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: your-application-name-here
                port:
                  number: 80
